--- a/main-folder/src/App.css
+++ b/main-folder/src/App.css
@@ -73,6 +73,64 @@ li {
 .tasknumber {
   font-size: 25px;
   color: #F1EBFF;
-  font-weight: 500;
-  padding-top: 5px;
+  font-weight: 400;
+  padding-top: 10px;
+  justify-content: center;
+  text-align: center;
+
 }
+
+.boton {
+	background-color:#7A89C2;
+	border-radius:4px;
+	border:1px solid #7A89C2;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:6px 15px;
+	text-decoration:none;
+  margin-top: 10px;
+}
+.boton:hover {
+	background-color:#7A89C2;
+}
+.boton:active {
+	position:relative;
+	top:1px;
+}
+
+.botondelete {
+	background-color:#7A89C2;
+	border-radius:4px;
+	border:1px solid #7A89C2;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:6px 15px;
+	text-decoration:none;
+  margin-top: 10px;
+}
+.botondelete:hover {
+	background-color:#7A89C2;
+}
+.botondelete:active {
+	position:relative;
+	top:1px;
+}
+
+.boton-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.icontrash {
+  cursor: pointer;
+}
+
+
+
+        
